run package msbuild

--- a/man/Agent/chatglm/chatglm/parse_batch_output.1
+++ b/man/Agent/chatglm/chatglm/parse_batch_output.1
@@ -4,6 +4,7 @@
 parse_batch_output \- 
 .SH SYNOPSIS
 \fIparse_batch_output(\fBfile\fR as any, 
+\fBparse_annotation\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 chatglm
