run package updates

--- a/man/Agent/chatglm/chatglm/batch_transaltion.1
+++ b/man/Agent/chatglm/chatglm/batch_transaltion.1
@@ -4,6 +4,8 @@
 batch_transaltion \- 
 .SH SYNOPSIS
 \fIbatch_transaltion(\fBcontent\fR as <generic> dataframe, 
+\fBprompt_text\fR as string = "你是一个从英文到中文的语言翻译器", 
+\fBadd_explains\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
 .SH SEE ALSO
 chatglm
