--- a/man/Agent/chatglm/chatglm/history_json.1
+++ b/man/Agent/chatglm/chatglm/history_json.1
@@ -1,9 +1,17 @@
 .\" man page create by R# package system.
 .TH CHATGLM 1 2000-Jan "history_json" "history_json"
 .SH NAME
-history_json \- 
+history_json \- build json string for chatglm history input
 .SH SYNOPSIS
 \fIhistory_json(\fBhis\fR as <generic> ChatHistory);\fR
+.SH DESCRIPTION
+.PP
+build json string for chatglm history input
+.PP
+.SH OPTIONS
+.PP
+\fBhis\fB \fR\- -. 
+.PP
 .SH SEE ALSO
 chatglm
 .SH FILES
