--- a/man/Agent/chatglm/chatglm/input_and_response.1
+++ b/man/Agent/chatglm/chatglm/input_and_response.1
@@ -1,11 +1,25 @@
 .\" man page create by R# package system.
 .TH CHATGLM 1 2000-Jan "input_and_response" "input_and_response"
 .SH NAME
-input_and_response \- 
+input_and_response \- add a new record of chat input and ai response for create the history data
 .SH SYNOPSIS
 \fIinput_and_response(\fBhis\fR as <generic> ChatHistory, 
 \fBinput\fR as string, 
 \fBresponse\fR as string);\fR
+.SH DESCRIPTION
+.PP
+add a new record of chat input and ai response for create the history data
+.PP
+.SH OPTIONS
+.PP
+\fBhis\fB \fR\- -. 
+.PP
+.PP
+\fBinput\fB \fR\- -. 
+.PP
+.PP
+\fBresponse\fB \fR\- -. 
+.PP
 .SH SEE ALSO
 chatglm
 .SH FILES
