--- a/man/Agent/chatglm/chatglm/parse_batch_output.1
+++ b/man/Agent/chatglm/chatglm/parse_batch_output.1
@@ -1,11 +1,22 @@
 .\" man page create by R# package system.
 .TH CHATGLM 1 2000-Jan "parse_batch_output" "parse_batch_output"
 .SH NAME
-parse_batch_output \- 
+parse_batch_output \- parse the result of the chatglm batch request
 .SH SYNOPSIS
 \fIparse_batch_output(\fBfile\fR as any, 
 \fBparse_annotation\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
+.SH DESCRIPTION
+.PP
+parse the result of the chatglm batch request
+.PP
+.SH OPTIONS
+.PP
+\fBfile\fB \fR\- -. 
+.PP
+.PP
+\fBenv\fB \fR\- -. 
+.PP
 .SH SEE ALSO
 chatglm
 .SH FILES
