--- a/man/Agent/chatglm/chatglm/batch_transaltion.1
+++ b/man/Agent/chatglm/chatglm/batch_transaltion.1
@@ -1,12 +1,34 @@
 .\" man page create by R# package system.
 .TH CHATGLM 1 2000-Jan "batch_transaltion" "batch_transaltion"
 .SH NAME
-batch_transaltion \- 
+batch_transaltion \- create json data for run chatglm batch task
 .SH SYNOPSIS
 \fIbatch_transaltion(\fBcontent\fR as <generic> dataframe, 
 \fBprompt_text\fR as string = "你是一个从英文到中文的语言翻译器", 
 \fBadd_explains\fR as boolean = TRUE, 
 [\fB<Environment>\fR]);\fR
+.SH DESCRIPTION
+.PP
+create json data for run chatglm batch task
+.PP
+.SH OPTIONS
+.PP
+\fBcontent\fB \fR\- 
+ a dataframe object that contains the batch task data for run:
+ 
+ 1. id: the unique reference id of each task
+ 2. term: the term for do translation
+. 
+.PP
+.SH VALUE
+.PP
+a collection of the batch task data for run the request
+.PP
+.SH DETAILS
+.PP
+the required file extension suffix name by upload 
+ batch data from web must be \fBjsonl\fR!
+.PP
 .SH SEE ALSO
 chatglm
 .SH FILES
